some style changes

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,22 @@
 body{
     background-color: black;
+
+
  /* overflow-y: hidden;
   overflow-x: hidden;  */
 }
+
 #namesAndPic{
-    position: absolute;
+
     display:flex;
     flex-direction: row;
-    top:17px
+
 }
 #names{
+    display:flex;
+    flex-direction: column;
+}
+#root{
     display:flex;
     flex-direction: column;
 }
@@ -42,8 +49,8 @@ button{
 }
 .hidden--mobile{
     display: flex;
-    position: absolute;
-    top:41vw;
+    /* position: absolute;
+    top:41vw; */
 }
 .whiteButton{
     background-color:white;
@@ -71,6 +78,91 @@ justify-content:space-between;
 position: relative;
 left:750px;
 }
+#Email{
+    margin-left:35%;
+    margin-top: 10%;
+}
+#ESubject{
+    width:40%;
+    border-radius: 16px;
+}
+#EBody{
+        width: 41%;
+        height: 20vw;
+        border-radius: 16px; 
+}
+#ESubmit{
+        width:41%;
+        border-radius: 16px;
+        background-color:green; 
+    }
+form{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+}
+p{
+    color:white;
+    margin:10%;
+}
+#AboutMe{
+    display:flex;
+    margin-left: 43%;
+    margin-top: 10%;
+    color:white;
+    flex-direction:column-reverse;
+    font-size: medium;
+   
+}
+p{
+    margin:10px;
+}
+
+  #projects{
+    display: flex;
+    justify-content: center;
+    justify-content: space-between;
+}
+#list{
+    color:white;
+    overflow-y:scroll;
+    font-size: 5vw;
+    height:40vw;
+    width:35vw;
+}
+#language1:hover {
+    transform: translateY(-8px);
+}
+#language2:hover {
+    transform: translateY(-8px);
+}
+#language3:hover {
+    transform: translateY(-8px);
+}
+#language4:hover {
+    transform: translateY(-8px);
+}
+#screen{
+    display: flex;
+align-self:center;
+}
+#table{
+    display:flex; 
+     justify-content: center;
+   color:white;
+
+    
+}
+#whiteday{
+    background-color: white;
+    color:green;
+}
+#greenday{
+    background-color: green;
+    color:white;
+}
+
+
 
 
 
@@ -141,6 +233,7 @@ left:750px;
         height:50px;
         color: green;
     }
+    
     footer{
         position:absolute;
         display: flex;
